Cleanup, address warnings, simplify (#1144)
* Backup-1

* Backup-2

* Backup-3

* SpotlessApply

* Minor changes

* rebase

* Updates

* Address comments